# trade

./: .dockerignore  .env.example  .env.production.example  .env.railway.example  .gitignore  .prettierignore  README.md  docker-compose.prod.yml  docker-compose.yml  lint-staged.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  railway.toml  tsconfig.json  turbo.json
apps/api/: Dockerfile  README.md  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 001_initial_schema.py  002_seed_roles_and_plans.py  003_auth_system.py  004_copy_trading.py  005_risk_engine.py  006_journal_enhancements.py  007_notification_services.py  008_billing_saas.py  009_admin_portal.py  010_journal_production.py  011_notification_platform.py  012_admin_enterprise.py  013_production_indexes.py  014_ai_platform.py  015_free_onboarding.py
apps/api/scripts/: migrate.sh  promote_admin.py  start-beat.sh  start-worker.sh  start.sh
apps/api/src/tradeflow/: __init__.py  main.py
apps/api/src/tradeflow/ai/: __init__.py  service.py  types.py
apps/api/src/tradeflow/core/: app_factory.py  (+12 more)
apps/api/tests/: __init__.py  conftest.py  test_admin.py  test_analytics.py  test_auth_api.py  test_auth_jwt.py  test_auth_security.py  test_billing.py  test_broker_adapters.py  test_broker_integration.py  test_copy_engine.py  test_db_models.py  test_health.py  test_integration_container.py  test_integration_smoke.py  test_journal.py  test_notifications.py  test_risk_engine.py
apps/api/tests/api/: test_admin_api.py  test_ai_api.py  test_billing_api.py  test_dashboard_api.py  test_notifications_api.py
apps/api/tests/integration/: test_auth_flow.py  test_billing_flow.py  test_broker_onboarding.py  test_copy_trading_api.py  test_risk_kill_switch_api.py
apps/api/tests/support/: auth_helpers.py  broker_helpers.py  factories.py  mocks.py
apps/api/tests/unit/: test_ai_providers.py  test_broker_sdk.py  test_leader_events.py  test_market_data.py  test_middleware.py  test_observability.py  test_oms_broker.py  test_risk_kill_switch.py  test_security_middleware.py  test_support_modules.py
(+386 files in other folders)
